tests/ui/structs-enums/issue-3008-2.rs
enum Foo { Foo_(Bar) }
struct Bar { x: Bar }
//~^ ERROR E0072

fn main() {
}
